Use AbsPath in cell mapping and related changes
Summary: We are converting everything to `AbsPath`/`RelPath` where appropriate. This diff changes cell mapping from `Path` to `AbsPath`.

Reviewed By: gabrielrussoc

shipit-source-id: 2657d48618a711a13c76c7b1d706cf3ec015d53f